[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghost-pii-pydantic"
version = "0.2.0"
description = "Automatic PII redaction for Pydantic v2 — masks sensitive data in logs and print statements. GDPR/HIPAA-friendly."
keywords = [
    "pii", "pydantic", "redaction", "data-privacy", "gdpr", "hipaa",
    "logging", "security", "compliance", "masking", "anonymisation",
    "pydantic-v2", "privacy", "data-protection",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sthitaprajna Sahoo", email = "papu.sahoo@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: Log Analysis",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage      = "https://github.com/STHITAPRAJNAS/ghost-pii-pydantic"
Repository    = "https://github.com/STHITAPRAJNAS/ghost-pii-pydantic"
Documentation = "https://github.com/STHITAPRAJNAS/ghost-pii-pydantic#readme"
Issues        = "https://github.com/STHITAPRAJNAS/ghost-pii-pydantic/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "email-validator>=2.0.0",
]

[project.entry-points."pytest11"]
ghost-pii = "ghost_pii.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/ghost_pii"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
